--- a/rl_navigation/params/flat/costmap_common_params.yaml
+++ b/rl_navigation/params/flat/costmap_common_params.yaml
@@ -15,6 +15,7 @@ obstacle_layer:
 
   laser_scan_sensor:
     data_type: LaserScan
+    sensor_frame: laser
     topic: laser_scan
     expected_update_rate: 0.2
     marking: true
